# PathSmith

./: .dockerignore  .gitignore  COMMERCIAL-LICENSE.md  Cargo.toml  Dockerfile  README.md
crates/cli/: Cargo.toml
crates/cli/src/: bench.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  multicrop.rs  postprocess.rs  preprocess.rs  presets.rs  trace.rs
crates/server/: Cargo.toml
crates/server/frontend/: index.html
crates/server/src/: main.rs
crates/wasm/: Cargo.toml
crates/wasm/example/: index.html
crates/wasm/src/: lib.rs
legacy/: crop_icons.py  requirements.txt  test.py
legacy/src/: cli.py  diff.py  pipeline.py  postprocess.py  preprocess.py  trace.py
