# Copyright (C) 2026 TheAnimatrix
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/server", "crates/wasm"]
# wasm is built for the wasm32 target via wasm-pack, not in the host default build.
default-members = ["crates/core", "crates/cli", "crates/server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["TheAnimatrix"]
repository = "https://github.com/TheAnimatrix/PathSmith"

[workspace.dependencies]
pathsmith-core = { path = "crates/core" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
