# Copyright (C) 2026 Avarnic
# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial licensing: COMMERCIAL-LICENSE.md — creo@avarnic.com

[package]
name = "pathsmith-wasm"
description = "WebAssembly bindings for PathSmith — convert raster to SVG in the browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pathsmith-core = { workspace = true }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde_json = { workspace = true }
